# seukka-NST-app

./: .gitignore  .gitmodules  1.js  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
config/config/: aws.json
paintings/: admin.py  models.py  schema.py  service.py  urls.py  views.py
paintings/migrations/: 0001_initial.py  0002_painting_like_count_alter_user_avatar.py  0003_painting_painting_alter_painting_image_and_more.py  0004_rename_image_painting_uploads_image.py  0005_rename_uploads_image_painting_upload_image.py  0006_rename_painting_painting_image.py  0007_alter_painting_upload_image.py  0008_alter_painting_image.py  0009_alter_user_options_alter_user_table.py  0010_painting_style.py  0011_alter_painting_style.py
paintings/routers/: __init__.py  paints_router.py  users_router.py
static/css/: home.css  mypage.css  nav.css  sign.css  style.css
static/js/: like_del_btn.js
templates/: 404.html  base.html  create.html  home.html  mypage.html  nav.html  sign_up_or_in.html
