[tool.poetry]
name = "sseoka2"
version = "0.1.0"
description = ""
authors = ["taehyeki <gmrrltkxogus@naver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
django-ninja = "^0.17.0"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
