[tool.poetry]
name = "sseoka2"
version = "0.1.0"
description = ""
authors = ["taehyeki <gmrrltkxogus@naver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
django-ninja = "^0.17.0"
Pillow = "^9.0.1"
django-cors-headers = "^3.11.0"
mysqlclient = "^2.1.0"
django-dotenv = "^1.4.2"
boto3 = "^1.21.9"
django-storages = "^1.12.3"
black = "^22.1.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 220